# combatris

./: .clang-format  .gitignore  CMakeLists-Catch.txt  CMakeLists.txt  Makefile  README.md
assets/: gamecontrollerdb.txt
cmake/: FindSDL2_mixer.cmake
combatris/: CMakeLists.txt
combatris/src/: combatris.cpp
combatris/src/game/: animation.h  asset_manager.cpp  asset_manager.h  assets.cpp  assets.h  board.cpp  board.h  campaign.cpp  campaign.h  campaign_types.h  combatris_menu.h  combatris_menu_model.h  combatris_types.h  constants.h  coordinates.h  events.h  hold_piece.h  level.cpp  level.h  matrix.cpp  matrix.h  next_piece.h  pane.h  play_field.cpp  play_field.h  predefined_fonts.h  renderer.h  scoring.h  sprite.h  tetrion.cpp  tetrion.h  tetromino.cpp  tetromino.h  tetromino_generator.cpp  tetromino_generator.h  tetromino_metadata.h  tetromino_rotation_data.h  tetromino_sprite.cpp  tetromino_sprite.h  tetromino_tspin_detection.cpp  (+2 more)
combatris/src/game/panes/: accumlator.h  goal.h  high_score.cpp  high_score.h  hold_piece.h  hold_queue.h  knockout.h  level.cpp  level.h  lines_sent.h  moves.cpp  moves.h  multi_player.cpp  multi_player.h  next_piece.h  next_queue.h  pane.h  pane_interface.h  player.cpp  player.h  receiving_queue.h  scoring.cpp  scoring.h  timer.cpp  timer.h  total_lines.h  vote.cpp  vote.h
combatris/src/network/: connection.h  game_server.h  listener.cpp  listener.h  multiplayer_controller.cpp  multiplayer_controller.h  online_game_controller.cpp  online_game_controller.h  protocol.h  protocol_timing_settings.h  udp_client_server.cpp  udp_client_server.h
combatris/src/tools/: color.cpp  color.h  text.cpp  text.h
combatris/src/utility/: color.cpp  color.h  fonts.cpp  fonts.h  function_caller.h  game_controller.h  menu_model.cpp  menu_model.h  menu_view.cpp  menu_view.h  pane.cpp  pane.h  text.cpp  text.h  texture.h  threadsafe_queue.h  timer.cpp  timer.h
combatris/test/: combatris_gameplay_test.cpp  combatris_network_test.cpp  combatris_test.cpp  network_listener_test.cpp  scoring_move_detection_tests.cpp  test_utility.h  udp_client_server_test.cpp  voting_tests.cpp
tools/: btags.sh  ds3activate  lc.sh
